# bevy_channel_trigger

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
examples/: simple.rs
src/: lib.rs
