[package]
name = "bevy_channel_trigger"
version = "0.1.0"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]
categories = ["game-development"]
description = "Send events via a channels form anywhere (eg. c-ffi) to Bevy Observers"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustunit/bevy_channel_trigger"
readme = "README.md"

[dependencies]
flume = { version = "0.11", default-features = false }
bevy = { version = "0.14", default-features = false }
