[package]
name = "bevy_channel_trigger"
version = "0.4.0"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]
categories = ["game-development"]
description = "Send events via a channels form anywhere (eg. c-ffi) to Bevy Observers"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustunit/bevy_channel_trigger"
readme = "README.md"

[lints]
workspace = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
crossbeam-channel = { version = "0.5" }
bevy_ecs = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }

[dev-dependencies]
bevy = "0.16"
